[tool.poetry]
name = "flask_rest_api"
version = "0.1.0"
description = ""
authors = ["w40141 <w.40141@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"
numpy = "^1.19.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
