[tool.poetry]
name = "flask_rest_api"
version = "0.1.0"
description = ""
authors = ["w40141 <w.40141@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.2"
flask = "^1.1.2"
requests = "^2.24.0"
sqlalchemy = "^1.3.19"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
